fix rickroll not fitting screen

--- a/css/main.css
+++ b/css/main.css
@@ -49,11 +49,6 @@
     margin-block-end: 0em;
   }
 
-  .rickroll {
-    max-height: 100%;
-    width: auto;
-  }
-
   .main-title-text {
     color: #fff;
     text-decoration: none;
